[package]
name = "dynamic-weighted-index"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Penschuck <dynamic-weighted-index@algorithm.engineering>"]

[dependencies]
rand = "0.8.5"
ez-bitset = "0.1.0"

[dev-dependencies]
pcg_rand = "0.13.0"
assert_float_eq = "1.1.3"
statrs = "0.15"
structopt = "0.3"
itertools = "0.10"

[profile.release]
debug = true
